kube/postgres/pv.pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
