kube/postgres/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: postgres  
spec:
  ingressClassName: nginx
  rules:
    - host: "pgadmin.ivy.cx"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: pgadmin
              port: 
                number: 80
